@@ -2,7 +2,7 @@
 Changes
 lib/HTML/Display/MozRepl.pm
 lib/HTTP/Cookies/MozRepl.pm
-lib/WWW/Mechanize/FireFox.pm
+lib/WWW/Mechanize/Firefox.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.skip
