@@ -2,9 +2,9 @@ use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 WriteMakefile(
-    'NAME'          => 'WWW::Mechanize::FireFox',
+    'NAME'          => 'WWW::Mechanize::Firefox',
     'LICENSE'       => 'perl',
-    'VERSION_FROM'  => 'lib/WWW/Mechanize/FireFox.pm', # finds $VERSION
+    'VERSION_FROM'  => 'lib/WWW/Mechanize/Firefox.pm', # finds $VERSION
     'PREREQ_PM'     => { 'MozRepl::RemoteObject' => 0.10,
                         'URI' => 0,
                         'HTTP::Response' => 0, # for interface compatibility with WWW::Mechanize
@@ -14,7 +14,7 @@ WriteMakefile(
                         'MIME::Base64' => 0,
                         'parent' => 0,
                       }, # e.g., Module::Name => 1.1
-    ABSTRACT_FROM   => 'lib/WWW/Mechanize/FireFox.pm', # retrieve abstract from module
+    ABSTRACT_FROM   => 'lib/WWW/Mechanize/Firefox.pm', # retrieve abstract from module
     AUTHOR          => 'Max Maischein <corion@cpan.org>',
 );
 
