@@ -5,9 +5,9 @@ use Cwd;
 use URI::file;
 use File::Basename;
 use File::Spec;
-use WWW::Mechanize::FireFox;
+use WWW::Mechanize::Firefox;
 
-my $mech = eval { WWW::Mechanize::FireFox->new( 
+my $mech = eval { WWW::Mechanize::Firefox->new( 
     autodie => 0,
     #log => [qw[debug]]
 )};
@@ -20,11 +20,11 @@ if (! $mech) {
     plan tests => 2;
 };
 
-isa_ok $mech, 'WWW::Mechanize::FireFox';
+isa_ok $mech, 'WWW::Mechanize::Firefox';
 
 my $destroyed;
 no warnings 'redefine';
-*WWW::Mechanize::FireFox::DESTROY = sub {
+*WWW::Mechanize::Firefox::DESTROY = sub {
     $destroyed++
 };
 undef $mech;
