@@ -1,9 +1,9 @@
 #!perl -w
 use strict;
 use Test::More;
-use WWW::Mechanize::FireFox;
+use WWW::Mechanize::Firefox;
 
-my $mech = eval { WWW::Mechanize::FireFox->new( 
+my $mech = eval { WWW::Mechanize::Firefox->new( 
     autodie => 0,
     #log => [qw[debug]],
 )};
@@ -16,7 +16,7 @@ if (! $mech) {
     plan tests => 4;
 };
 
-isa_ok $mech, 'WWW::Mechanize::FireFox';
+isa_ok $mech, 'WWW::Mechanize::Firefox';
 
 my ($site,$estatus) = ('http://search.cpan.org/',200);
 my $res = $mech->get($site);
