@@ -1,13 +1,13 @@
 #!perl -w
 use strict;
 use Test::More;
-use WWW::Mechanize::FireFox;
+use WWW::Mechanize::Firefox;
 use URI::file;
 use File::Basename;
 use File::Spec;
 use Cwd;
 
-my $mech = eval { WWW::Mechanize::FireFox->new( 
+my $mech = eval { WWW::Mechanize::Firefox->new( 
     autodie => 0,
     #log => [qw[debug]]
 )};
@@ -20,7 +20,7 @@ if (! $mech) {
     plan tests => 17;
 };
 
-isa_ok $mech, 'WWW::Mechanize::FireFox';
+isa_ok $mech, 'WWW::Mechanize::Firefox';
 
 $mech->get_local('51-mech-sandbox.html');
 $mech->allow('javascript' => 1);
