@@ -1,12 +1,12 @@
 #!perl -w
 use strict;
 use Test::More;
-use WWW::Mechanize::FireFox;
+use WWW::Mechanize::Firefox;
 use URI::file;
 use Cwd;
 use File::Basename;
 
-my $mech = eval { WWW::Mechanize::FireFox->new( 
+my $mech = eval { WWW::Mechanize::Firefox->new( 
     autodie => 0,
     #log => [qw[debug]]
 )};
@@ -19,7 +19,7 @@ if (! $mech) {
     plan tests => 3;
 };
 
-isa_ok $mech, 'WWW::Mechanize::FireFox';
+isa_ok $mech, 'WWW::Mechanize::Firefox';
 
 my $res = eval { $mech->get_local('70-rt71216.html'); 1 };
 my $err = $@;
