@@ -1,12 +1,12 @@
 #!perl -w
 use strict;
 use Test::More;
-use WWW::Mechanize::FireFox;
+use WWW::Mechanize::Firefox;
 use URI::file;
 use Cwd;
 use File::Basename;
 
-my $mech = eval {WWW::Mechanize::FireFox->new( 
+my $mech = eval {WWW::Mechanize::Firefox->new( 
     autodie => 0,
     #log => [qw[debug]]
 )};
